@@ -16,7 +16,8 @@ CONVERT_OBJS  = libv4lconvert.o tinyjpeg.o sn9c10x.o sn9c20x.o pac207.o \
 		mr97310a.o flip.o crop.o jidctflt.o spca561-decompress.o \
 		rgbyuv.o spca501.o sq905c.o bayer.o hm12.o \
 		control/libv4lcontrol.o processing/libv4lprocessing.o \
-		processing/whitebalance.o processing/autogain.o
+		processing/whitebalance.o processing/autogain.o \
+		processing/gamma.o
 TARGETS       = $(CONVERT_LIB) libv4lconvert.pc
 INCLUDES      = ../include/libv4lconvert.h
 
